<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/diceImage1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/rolled_dice"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diceImage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_0" />

    <ImageView
        android:id="@+id/diceImage2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/rolled_dice"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diceImage3"
        app:layout_constraintStart_toEndOf="@+id/diceImage1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_0" />

    <ImageView
        android:id="@+id/diceImage3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/rolled_dice"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diceImage4"
        app:layout_constraintStart_toEndOf="@+id/diceImage2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_0" />

    <ImageView
        android:id="@+id/diceImage4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/rolled_dice"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diceImage5"
        app:layout_constraintStart_toEndOf="@+id/diceImage3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_0" />

    <ImageView
        android:id="@+id/diceImage5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/rolled_dice"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/diceImage4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_0" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rollModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>